minor typo corrections

--- a/lab_manual.tex
+++ b/lab_manual.tex
@@ -199,8 +199,7 @@ commentary on the nearby text.
   the document formatting language in which this manual is written),
   you'll want to \href{https://www.latex-project.org/get/}{download \LaTeX} and take a look at
   \href{https://www.latex-tutorial.com/tutorials/quick-start/}{this
-    ``quick start'' tutorial}.} 
-    If you don't understand something you 
+    ``quick start'' tutorial}.} If you don't understand something you 
 read in this manual, it is important that you \textit{ask another lab
   member for help}.  Every member of the lab brings their own unique
 knowledge base, training, life experiences, and perspectives.
@@ -218,9 +217,9 @@ inconsistency!
   sign it (electronically), and email a PDF (of just the signature
   page) to
   \href{mailto:contextualdynamics@gmail.com}{contextualdynamics@gmail.com}.
-  \textbf{You are not an official lab member until you have completed
+  \textbf{You are officially a lab member once you have completed
     all tasks in this manual and receipt of your signed and filled-out
-    signature page is acknowledged by \director~or \coordinator.}}
+    signature page and checklist has been acknowledged by \director~or \coordinator.}}
 \newthought{Why is it worth my time to read through the manual?}
 Aside from pursuing your own curiosity, a major reason that you've
 decided to join an academic research lab is probably because you want
@@ -245,7 +244,12 @@ particular task (or understanding a particular concept) that isn't
 covered by the existing set of tutorials, please consider contributing
 a tutorial of your own once you've figured things out!
 
-If you encounter an error or problem you don't know how to fix, try checking the \hyperref[ch:faq]{ask a question, answer a question} section, where we maintain a log of common problems lab members run into and solutions. If your don't see a solution to your question there, consider adding the question so that you or someone else can later add the answer for future readers!
+If you encounter an error or problem you don't know how to fix, try
+checking the \hyperref[ch:faq]{ask a question, answer a question}
+section, where we maintain a log of common problems and quick
+solutions. If you don't see a solution to your question there,
+consider adding the question so that you or someone else can add
+the answer for future lab members!
 
 
 \chapter{Bill of rights and responsibilities}\label{ch:billofrights}
@@ -298,7 +302,7 @@ certain rights, and you agree to take on certain responsibilities.
 
 \noindent If you feel your rights as a lab member have been, or are in danger of
 being, violated, it is your duty to report those violations to a
-senior staff member (e.g.\ \director, Department Chair, Deans, polices,
+senior staff member (e.g.\ \director, Department Chair, Deans, police,
 Title IX coordinator, ombudsman, etc.).  Similarly, if you notice
 others endangering others' rights, or neglecting their
 responsibilities, it is your duty to report those violations to a
@@ -358,7 +362,7 @@ chunks, but the key insight of the agile approach is that we only need
 to know what the \textit{next} chunk is, rather than attempting to
 forecast out over an extended timeline.  Although it's often helpful to
 have a general (if vague) sense of where things are going, we never
-actually need to know where the project will ultimately end up.  The
+actually need to know where a project will ultimately end up.  The
 goals and process are constantly evolving.  Perhaps the best
 justification for this approach is that \textbf{the first day of a new
   research project is when you're the most clueless about what you'll
@@ -377,12 +381,13 @@ tenets:
   In practice this means that a simpler (but potentially less
   comprehensive) tool or approach may be preferable in that it could
   be easier for a reader or user to make sense of.
-\item Value \textbf{working, intuitive, tools and research products} over
-  \textit{comprehensive documentation}.  Documentation is important!
-  But if our research products are designed in an intuitive way, they
-  can (in some sense) serve as their own documentation.  An intuitive
-  tool or research product with decent documentation is always preferable to a unintuitive
-  tool or research product with comprehensive documentation.
+\item Value \textbf{working, intuitive, tools and research products}
+  over \textit{comprehensive documentation}.  Documentation is
+  important!  But if our research products are designed in an
+  intuitive way, they can (in some sense) serve as their own
+  documentation.  An intuitive tool or research product with decent
+  documentation is always preferable to an unintuitive tool or
+  research product with comprehensive documentation.
 \item Value \textbf{responding to change} over \textit{following a
     plan}.  Each new step of the research process brings new insights
   and potentially uncovers mistakes or inefficiencies.  Those
@@ -446,10 +451,10 @@ While there is value to the \textit{italicized} items, we value
   your project.  Commit your changes to GitHub, or document your
   progress in Slack or a Google Doc.  Maintain careful records and
   logs so that someone can pick up your work in the future (and that
-  future someone might be you!).  Remember that your
-  greatest ally is your past self, but they'll never respond to email or
-  Slack messages!  Help ``future you'' maintain peak efficiency
-  through slow and steady, well-documented work.  (Note: don't spend
+  future someone might be you!).  Remember that your greatest
+  collaborator is your past self, but they don't respond to emails
+  or Slack messages!  Help ``future you'' maintain peak efficiency
+  through methodical and well-documented work.  (Note: don't spend
   \textit{too} much time on documentation; e.g. GitHub commits are
   themselves often sufficient for documentation, since once can always
   compare different versions of a particular file.)
@@ -471,14 +476,14 @@ While there is value to the \textit{italicized} items, we value
   you're excited to work on!
 
 \item The most effective and efficient method of conveying information
-  within a research team is face-to-face conversation.  We use
-  the
-  \hyperref[sec: scheduling]{CDL
-    Google calendar} to coordinate formal meetings between lab
-  members.  You can also sign up for meetings with \director~via
+  within a research team is face-to-face conversation.  We use the
+  \hyperref[sec: scheduling]{CDL Google calendar} to coordinate formal
+  meetings between lab members.  You can also sign up for meetings
+  with \director~via
   \href{https://context-lab.youcanbook.me/}{YouCanBook.Me}.  We also
-  use Slack to coordinate, share notes/data, etc., but the ideal form
-  of communication in the lab is face-to-face (and it often involves a whiteboard).
+  use Slack to coordinate, share notes/data, etc.  But the
+  \textit{ideal} form of communication in the lab is face-to-face, and
+  it often involves a whiteboard.
 
 \item Agile research is sustainable research.  Researchers should be
   able to maintain a constant pace indefinitely.  To be sure, we
@@ -564,7 +569,7 @@ ways:
 \item Carried out non-trivial data analyses (e.g.\ more complicated
   than $t$-tests)
 \item Contributed novel tools or resources to the project that haven't
-  been published yet.
+  been published yet
 \end{enumerate}
 
 \marginnote{\texttt{NOTE:} Conference posters and abstracts generally
@@ -580,8 +585,8 @@ contributions were limited to the following:
   \item Getting trained by one of the other project members on a
     project-related task
   \item Training another project member on a project-related task
-  \item Sharing already-published tools or resources.
-  \item Editing or commenting on a draft of the manuscript.
+  \item Sharing already-published tools or resources
+  \item Editing or commenting on a draft of the manuscript
 \end{enumerate}
 
 The final determination for who will be an author on each lab paper
@@ -676,9 +681,9 @@ these roles on your project:
 \item Have autonomy regarding how to reach commitments
 \item Are intensely collaborative
 \item Are (ideally) located in one team room (usually this will be the lab)
-\item Are (ideally) committed to long-term, full-time lab membership
+\item Are (ideally) committed to long-term, consistent lab membership
 \item Are (ideally) focused on a single team/project at a time
-\item Often act in various leadership roles
+\item Have a leadership role
 \end{enumerate}
 
 \item \textbf{Project Coordinator.} The Project Coordinator facilitates
@@ -694,7 +699,7 @@ these roles on your project:
 \item Have no management authority over the team (anyone with authority
   over the team is by definition not its Project
   Coordinator)
-\item Occasionally act in a leadership role
+\item Has a leadership role
 \item Will usually be the Lab Coordinator (\href{mailto:contextualdynamics@gmail.com}{\coordinator})
 \end{enumerate}
 
@@ -755,17 +760,17 @@ meetings:
 \item \textbf{Project meetings.}  Several of our collaborative
   projects involve regular coordination with external lab members.
   These are organized on an \textit{ad hoc} basis for each project.
-  Attendees: all project team members, and any other interested active
+  Attendees: all project team members and any other interested active
   lab members. 
   
   \item \textbf{Hackathons.}  We occasionally organize hackathon
     style events whereby spontaneously organized groups work towards
     one or more very short term projects or goals.  These are
     scheduled on an \textit{ad hoc} basis.  Attendees: all interested
-    lab members, any interested member of the Dartmouth community,
+    lab members, any interested member of the Dartmouth community, and
     external collaborators.  
 
-\marginnote{\texttt{NOTE:} Each term, you'll sign up for a beginning-of-term and
+\marginnote{\texttt{NOTE:} Each term, you should sign up for a beginning-of-term or
     end-of-term meeting time with \director~via \href{https://context-lab.youcanbook.me/}{YouCanBook.Me}.}
 
   \item \textbf{Beginning-of-term and end-of-term meetings.} At the
@@ -782,7 +787,7 @@ meetings:
     Attendees: all interested lab and non-lab Dartmouth community
     members.
     \marginnote{\texttt{TASK:} If you are a paid lab employee, or if
-      you would like to submit weekly snippets, email \director to get
+      you would like to submit weekly snippets, email \director~to get
       added to the Howdy script.}
     \item \textbf{Howdy weekly snippets.} Each week (via Slack), all
       paid employees must fill out a ``weekly snippet'' with brief
@@ -799,14 +804,14 @@ meetings:
       weekly snippet schedule, email \director.  Being added to the
       weekly snippet schedules means that you will receive a link via
       the ``Howdy'' survey bot (through Slack) each Monday at 9am.
-      Your answers are then compiled into reports that I receive each
-      Wednesday at 10am.
-      If you are an unpaid
-      employee but are likely to request a letter of recommendation,
-      weekly snippets are a good way for me to maintain a detailed
-      sense of what you are working on from week to week and how you
-      are progressing over time.  (Virtual) attendees: all paid lab
-      members and any other lab members who want to participate.
+      Your answers are then compiled into reports that
+      \director~receives each Wednesday at 10 AM.  If you are an
+      unpaid employee but are likely to request a letter of
+      recommendation, weekly snippets are a good way for me to
+      maintain a detailed sense of what you are working on from week
+      to week and how you are progressing over time.  (Virtual)
+      attendees: all paid lab members and any other lab members who
+      want to participate.
 \end{enumerate}
   
 %\newpage
@@ -814,7 +819,7 @@ meetings:
 
 \noindent 
 \marginnote{\texttt{TASK:} Create (free) Google, Trello, and GitHub
-  accounts.  Send your addresses and/or usernames to \coordinator
+  accounts.  Send your addresses and/or usernames to \coordinator~
   (cc'ing \director) so that you can be added to the lab groups.  Also
   send your preferred email address so that you can be added to the
   lab Slack account.}The very first thing you need to do is to get set
@@ -849,11 +854,11 @@ accomplish various necessary administrative tasks:
     1Password invite from \director.} This platform is used by senior
   lab members to manage secure notes and passwords (e.g.\ shared
   software licenses, card numbers and chart strings, etc.).  
-  \item \href{http://www.context-lab.com/}{\textbf{Lab website.}}
+\item \href{http://www.context-lab.com/}{\textbf{Lab website.}}
   \marginnote{\texttt{TASK:} Submit a photograph (of yourself or some
-    other picture or image that you want to represent you) and brief
-    2-3 sentence biography to \coordinator~so that you can be added to
-    the \href{http://www.context-lab.com/people/}{people page} on the
+    other picture or image that you want to represent you) and a 2-3
+    sentence biography to \coordinator~so that you can be added to the
+    \href{http://www.context-lab.com/people/}{people page} on the lab
     website.  Alternatively, if you do not wish to be included on the
     website, send a note to \coordinator~expressing that you do not
     want to be added to the website.} We use the lab website to
@@ -863,8 +868,8 @@ accomplish various necessary administrative tasks:
 
 Once you've created those accounts, you can ask any questions through
 Slack (use the
-\href{https://context-lab.slack.com/messages/general/}{\#general
-  channel} or the channel specific your project).  Depending on your
+\href{https://context-lab.slack.com/messages/general/}{\#general}
+  channel or the channel specific your project).  Depending on your
 role in the lab, you may be added on Slack as a single-channel guest
 (access to only one channel) or a full member (access to all lab
 channels).  This generally depends on how long you've been in the lab
@@ -933,23 +938,26 @@ described above, the focus of lab projects will change over time), but
 it gives some sense of how you should be allocating your work time.
 
 If you are a part-time employee of the lab, prior experience has shown
-that you will be able to make a meaningful contribution to a single
-project at a time.  If you are a full-time employee, you may choose to
-devote some of your time to a secondary project (with the
-understanding that you will always prioritize your primary project).
-If you want to change which project is your primary project, or if you
-want to divide you time across multiple projects, you should
-coordinate this with \director, \coordinator, and your team members.
+that you will most likely be able to make a meaningful contribution to
+a only single project at a time.  If you are a full-time employee, you
+may choose to devote some of your time to a secondary project (with
+the understanding that you will always prioritize your primary
+project).  If you want to change which project is your primary
+project, or if you want to divide you time across multiple projects,
+you should coordinate this with \director, \coordinator, and your team
+members.
 
 
 \newthought{Scheduling}
 \label{sec: scheduling}
 
-\noindent \marginnote{\texttt{TASK:} email \coordinator~to request invites to each of the calendars below---the download links in the lab manual are read-only!}
-Our lab's scheduling practices and policies are intended to facilitate
-lab member interactions between ourselves, our collaborators, and our
-experimental participants.  There are three basic tools the lab uses
-to organize and schedule events:
+\noindent \marginnote{\texttt{TASK:} email \coordinator~to request
+  invites to each of the calendars below---the download links in the
+  lab manual are read-only!}  Our lab's scheduling practices and
+policies are intended to facilitate lab member interactions between
+ourselves, our collaborators, and our experimental participants.
+There are three basic tools the lab uses to organize and schedule
+events:
 \begin{itemize}
 \item \href{http://calendar.google.com}{Google Calendar}:
   \begin{itemize}
@@ -974,9 +982,10 @@ schedules of grad students and undergraduates.
   calendar} to keep track of important events and meetings at DHMC.
   \item We use the \href{https://calendar.google.com/calendar/ical/mp1bujb39ud5bgmmnq9r8dbiuk\%40group.calendar.google.com/private-8a3c6919c30e7b118ab3a4fd23aad6cf/basic.ics}{PBS department events calendar} to keep track of talks and events happening in the department.
   \item You may also choose to create project-specific
-  Google Calendars, inviting project team members.  When you add an
-  event (in any lab calendar), it is important to include
-  the following information as a comment (this does not apply to ``out-of-lab'' events):
+    Google Calendars, inviting project team members.
+  \item When you add an event (in any lab calendar), it is important
+    to include the following information as a comment (this does not
+    apply to ``out-of-lab'' events):
 \begin{itemize}
   \item Key contact names and contact information (email or phone)
   \item Physical address (where the event will take place)
@@ -994,7 +1003,7 @@ schedules of grad students and undergraduates.
   relatively small number of dates.  YouCanBook.Me is used to sign up
   for meeting slots with \director.  You can book a meeting in a free
   slot through YouCanBook.Me at any time if you would like to meet
-  with \director.
+  with \director.  Most meetings with \director~happen on Wednesdays.
 \end{itemize}
 
  \subsection{Attendance policy}
@@ -1005,13 +1014,13 @@ schedules of grad students and undergraduates.
  can interact in person to share ideas, leverage expertise, solve
  problems, etc.  Therefore, even if you end up deciding to shift your
  hours, we'd like you to make a strong effort to be physically present
- in the lab between 1 and 4 pm (prior arrangements notwithstanding;
+ in the lab between 1 and 4 PM (prior arrangements notwithstanding;
  e.g. if you have a long commute and we've agreed that you won't come
  in every day, or if you need to occasionally schedule an
- appointment during the 1--4 pm window).  Similarly, if
+ appointment during the 1--4 PM window).  Similarly, if
  you are a part time employee, we'd like you to try to put in your
- in-the-lab hours during the 1--4 pm time window as often as
- possible.
+ in-the-lab hours during the 1--4 PM time window as often as
+ possible.  (This is in addition to weekly lab meetings.)
 
 The lab also abides by Dartmouth's standard paid time off policies for
 benefits-eligible (full-time, non-student) employees.  If you are a
@@ -1077,7 +1086,7 @@ official lab attendance policy:
 \item If you are scheduled to present at a conference (i.e.\ you
   submit an abstract and the abstract is accepted as a talk or
   poster), you are expected to attend the conference to present your
-  work.  In the extremely rate event that an emergency situation
+  work.  In the extremely rare event that an emergency situation
   arises that would prevent you from presenting as scheduled, you are
   expected to make alternative arrangements (e.g.\ by arranging for a
   co-author to present in your place).
@@ -1207,8 +1216,8 @@ repository includes
  \marginnote{\texttt{NOTE:} To obtain funding for a scientific
    conference, \textit{prior to submitting your abstract}, you must
    (a) briefly describe or discuss how attending the conference fits
-   in with your goals and/or plans, (b) provide confirm that you have
-   applied for some form of external funding, and (c) provide an
+   in with your goals and/or plans, (b) provide confirmation that you
+   have applied for some form of external funding, and (c) provide an
    approximate travel budget, including all registration fees,
    tickets, meals, etc.  Your budget should not include lab events
    (e.g.\ lab dinners), which are covered by a separate mechanism.
@@ -1216,23 +1225,22 @@ repository includes
    abstract in order for the lab to cover your expenses.  (Your
    expenses will be covered up the agreed-upon amount, at which point
    you are responsible for making your travel plans accordingly,
-   submitting receipts, etc.)}A major
-   component of doing scientific research is communicating with other
-   scientists.  The Contextual Dynamics Lab regularly presents at
-   several international scientific conferences.  If you are
-   presenting your work from the lab (i.e., you are the presenting
-   author for a talk or poster), then your travel expenses and
-   conference registration fees will be guaranteed by the lab,
-   \textit{under the assumption that you will also make reasonable
-     efforts to seek out alternative sources of travel funding} (e.g.\
-   through PBS, other internal Dartmouth sources, applying for travel
-   awards, using personal grants like NRSAs or NSF fellowships, etc.).
-   You are also expected to keep costs low (e.g.\ fly economy class,
-   seek out cheaper tickets, stay in reasonably priced hotels, share a
-   room with other lab members, etc.).  By the same token, we also
-   want to be cognizant of your comfort and time, and it is not always
-   necessary to use the cheapest option.  More specific travel
-   guidelines will be given on a per-conference or per-trip basis.
+   submitting receipts, etc.)}A major component of doing scientific
+ research is communicating with other scientists.  The Contextual
+ Dynamics Lab regularly presents at several international scientific
+ conferences.  If you are presenting your work from the lab (i.e., you
+ are the presenting author for a talk or poster), then your travel
+ expenses and conference registration fees will be guaranteed by the
+ lab, \textit{under the assumption that you will also make reasonable
+   efforts to seek out alternative sources of travel funding} (e.g.\
+ through PBS, other internal Dartmouth sources, applying for travel
+ awards, using personal grants like NRSAs or NSF fellowships, etc.).
+ You are also expected to keep costs low (e.g.\ fly economy class,
+ seek out cheaper tickets, stay in reasonably priced hotels, share a
+ room with other lab members, etc.).  By the same token, we also want
+ to be cognizant of your comfort and time, and it is not always
+ necessary to use the cheapest option.  More specific travel
+ guidelines will be given on a per-conference or per-trip basis.
 
  If you are not presenting your work (or if you're presenting non-lab
  work), but you are a senior lab member, then the lab may cover your travel
@@ -1314,7 +1322,7 @@ This section contains a log of common issues and errors encountered by lab membe
 
 \item For issues with other lab-owned equipment (e.g.~computers, research equipment, etc.) \coordinator~ or the senior lab member actively using the equipment should be your first-sought resource.
 
-\item For issues withDartmouth IT, \href{help@dartmouth.edu}{open a ticket} with the Information, Technology, and Consulting office, or contact \href{mailto:Andrew.C.Knutsen@Dartmouth.edu}{Andrew Knutsen}.
+\item For issues with Dartmouth IT, \href{help@dartmouth.edu}{open a ticket} with the Information, Technology, and Consulting office, or contact \href{mailto:Andrew.C.Knutsen@Dartmouth.edu}{Andrew Knutsen}.
 
 \item For issues related to the the Discovery computing cluster, contact \href{mailto:John.P.Hudson@Dartmouth.edu}{John Hudson}.
 \end{itemize}
@@ -1328,22 +1336,37 @@ This section contains a log of common issues and errors encountered by lab membe
 
 \subsection{Lab policy}
 \begin{itemize}
-\item If you have a question about the lab's policies, first try to find the answer in the \href{https://github.com/ContextLab/lab-manual/tree/master/lab_manual.pdf}{Lab Manual}.
+\item If you have a question about the lab's policies, first try to
+  find the answer in the
+  \href{https://github.com/ContextLab/lab-manual/tree/master/lab_manual.pdf}{Lab
+    Manual}.
 
-\item If you feel your question is not adequately answered in the Lab Manual, post your question on Slack (or, if it's a private issue, talk to \director).
+\item If you feel your question is not adequately answered in the Lab
+  Manual, post your question on Slack (or, if it's a private issue,
+  talk to \director).
 
-\item If you think your question is likely to be of general interest, update the lab manual to reflect the answer.
+\item If you think your question is likely to be of general interest,
+  update the lab manual to reflect the answer.
 \end{itemize}
 
 \subsection{Specific methods}
 \begin{itemize}
-\item If you have questions about specific methods related to a project, ask a senior lab member working on the project.
+\item If you have questions about specific methods related to a
+  project, ask a senior lab member working on the project.
 
-\item It may also be helpful to check the \href{https://github.com/contextLab/cdl-tutorials}{CDL tutorials} repo, and contact the author(s) or contributors of a related tutorial. 
+\item It may also be helpful to check the
+  \href{https://github.com/contextLab/cdl-tutorials}{CDL tutorials}
+  repo, and contact the author(s) or contributors of a related
+  tutorial.
 
-\item You can also post your question in the \href{https://context-lab.slack.com/messages/computrons/}{\#computrons channel} on Slack.
+\item You can also post your question in the
+  \href{https://context-lab.slack.com/messages/computrons/}{\#computrons}
+  channel on Slack.
  
-\item Remember, \href{https://www.google.com/}{Google} and \href{https://stackoverflow.com/}{Stack Overflow} are your best friends! You'll rarely ever encounter a problem someone else hasn't faced before.
+\item Remember, \href{https://www.google.com/}{Google} and
+  \href{https://stackoverflow.com/}{Stack Overflow} are your friends!
+  Often other people have encountered (and solved!) similar problems,
+  and sometimes they even share the answers online!
 
 \item For more general methods questions, talk to \coordinator.
 
@@ -1371,27 +1394,27 @@ This section contains a log of common issues and errors encountered by lab membe
 \item \href{https://www.hanovernh.org/hanover-police-department}{Hanover Police} (if criminal activity is involved)
 \end{itemize}
 
-\clearpage
+% \clearpage
 
-\newthought{Compiled problems and solutions}
+% \newthought{Compiled problems and solutions}
 
-\subsection{Testing rooms}
-This section contains common issues and errors encountered when running subjects in our testing rooms. 
-
-
-\subsection{Git \& GitHub}
-This section contains common errors encountered using Git locally or syncing with the lab's GitHub repositories.
+% \subsection{Testing rooms}
+% This section contains common issues and errors encountered when running subjects in our testing rooms. 
 
 
-\subsection{Data analysis}
-This section contains common errors encountered with many of the analysis-related software packages frequently used by the lab
+% \subsection{Git \& GitHub}
+% This section contains common errors encountered using Git locally or syncing with the lab's GitHub repositories.
 
 
-\subsection{Computing cluster}
-This section contains common errors encountered submitting and running jobs on Dartmouth's computing cluster.
+% \subsection{Data analysis}
+% This section contains common errors encountered with many of the analysis-related software packages frequently used by the lab
 
-\subsection{Other assorted issues}
-This section contains commonly encountered issues that don't fit well in any of the above sections. Over time, if multiple issues begin to accumulate here that seem related to a broad topic, feel free to create a new section and move the related issues there.
+
+% \subsection{Computing cluster}
+% This section contains common errors encountered submitting and running jobs on Dartmouth's computing cluster.
+
+% \subsection{Other assorted issues}
+% This section contains commonly encountered issues that don't fit well in any of the above sections. Over time, if multiple issues begin to accumulate here that seem related to a broad topic, feel free to create a new section and move the related issues there.
 
 
 
@@ -1436,6 +1459,7 @@ need access to RAPPORT then let \director~know.
      data collection as well.
    \end{enumerate}
 
+   \newthought{Testing procedure}
    When you run an experimental participant, you must have them sign a
    consent form.  After each day of testing (or more frequently), you
    should give all signed consent forms to \coordinator.  Consent
