--- a/lab_manual.tex
+++ b/lab_manual.tex
@@ -181,7 +181,9 @@ our general research approach and lab policies.
     page}; you can use the existing issues to help decide what to
   focus on for own edits if you'd like.  Importantly, be sure to fork the \href{https://github.com/ContextLab/lab-manual}{GitHub
     repository}, make your edits on your personal fork, and submit
-  a pull request with your edits so that everyone can benefit.}Every new lab member should read
+  a pull request with your edits so that everyone can benefit. 
+(You won't be able to view either of the pages linked above until
+you've been added to the lab on GitHub).}Every new lab member should read
 the latest version of this lab manual in detail and reference it later
 as needed.  Periodically throughout the document, you will see margin
 notes with listed \texttt{TASK} items.  Completing your read through
@@ -381,7 +383,7 @@ tenets:
   In practice this means that a simpler (but potentially less
   comprehensive) tool or approach may be preferable in that it could
   be easier for a reader or user to make sense of.
-\item Value \textbf{working, intuitive, tools and research products}
+\item Value \textbf{working, intuitive tools and research products}
   over \textit{comprehensive documentation}.  Documentation is
   important!  But if our research products are designed in an
   intuitive way, they can (in some sense) serve as their own
