--- a/lab_manual.tex
+++ b/lab_manual.tex
@@ -1483,6 +1483,8 @@ need access to RAPPORT then let \director~know.
 \item I have submitted one or more edits to the lab manual by making a
   pull request to the
   \href{https://github.com/ContextLab/lab-manual}{GitHub repository}.
+\item I have added or commented on at least one issue on the lab manual's 
+\href{https://github.com/ContextLab/lab-manual/issues}{GitHub issues page}.
   \item I have read \href{https://www.sciencemag.org/careers/2018/11/what-can-we-learn-dartmouth}{Leah Somerville's commentary} on speaking
     out in toxic or abusive environments.
   \item I have reviewed the
