added note about recompiling after edits

--- a/lab_manual.tex
+++ b/lab_manual.tex
@@ -181,9 +181,10 @@ our general research approach and lab policies.
     page}; you can use the existing issues to help decide what to
   focus on for own edits if you'd like.  Importantly, be sure to fork the \href{https://github.com/ContextLab/lab-manual}{GitHub
     repository}, make your edits on your personal fork, and submit
-  a pull request with your edits so that everyone can benefit.
-(You won't be able to view either of the pages linked above until
-you've been added to the lab on GitHub).}Every new lab member should read
+  a pull request with your edits so that everyone can benefit. Be sure to recompile
+  the .tex file when you make your changes so that the .pdf file is updated, and the \LaTeX~compiler
+  catches any errors you may have made.}
+Every new lab member should read
 the latest version of this lab manual in detail and reference it later
 as needed.  Periodically throughout the document, you will see margin
 notes with listed \texttt{TASK} items.  Completing your read through
