Added shared lab paper repo link

--- a/lab_manual.tex
+++ b/lab_manual.tex
@@ -1215,6 +1215,9 @@ repository includes
  equipment should be treated with care and respect.  Any malfunctions
  should be reported immediately.
 
+\subsection{Repository of shared lab papers}
+There exists a \href{https://www.dropbox.com/sh/41z781ncuodedsl/AABMYFjVFhYxSetI4EX0_2Rma}{Dropbox repo} of shared lab papers for the use of lab members.
+
  \subsection{Travel policy}
  \marginnote{\texttt{NOTE:} To obtain funding for a scientific
    conference, \textit{prior to submitting your abstract}, you must
