--- a/lab_manual.tex
+++ b/lab_manual.tex
@@ -1216,7 +1216,7 @@ repository includes
  should be reported immediately.
 
 \subsection{Repository of shared lab papers}
-There exists a Dropbox repo of shared lab papers for the use of lab members. Contact Jeremy or Paxton for the link.
+Our lab maintains a Dropbox repository of PDFs for internal use by lab members and affiliates. Contact \director~or \coordinator~for a link (not to be shared publicly).
 
  \subsection{Travel policy}
  \marginnote{\texttt{NOTE:} To obtain funding for a scientific
