--- a/lab_manual.tex
+++ b/lab_manual.tex
@@ -946,7 +946,7 @@ a only single project at a time.  If you are a full-time employee, you
 may choose to devote some of your time to a secondary project (with
 the understanding that you will always prioritize your primary
 project).  If you want to change which project is your primary
-project, or if you want to divide you time across multiple projects,
+project, or if you want to divide your time across multiple projects,
 you should coordinate this with \director, \coordinator, and your team
 members.
 
